QuickCSS min-height fix
Fixed the height making it possible to click anywhere in the editor to start typing
Changed the scrollbar square back to the editor's border color 🤷‍♀️

--- a/src/renderer/coremods/settings/pages/QuickCSS.css
+++ b/src/renderer/coremods/settings/pages/QuickCSS.css
@@ -1,6 +1,6 @@
 #rp-quickcss-tab,
 #replugged-quickcss-wrapper {
-  height: calc(100%);
+  height: 100%;
 }
 
 #replugged-quickcss-wrapper .cm-editor {
@@ -26,7 +26,7 @@
 
 #replugged-quickcss-wrapper .cm-content,
 #replugged-quickcss-wrapper .cm-gutter {
-  min-height: 300px;
+  min-height: 100%;
 }
 
 #replugged-quickcss-wrapper .cm-scroller {
@@ -47,5 +47,5 @@
   border-radius: var(--custom-index-scrollbar-width);
 }
 #replugged-quickcss-wrapper .cm-scroller::-webkit-scrollbar-corner {
-  background: transparent;
+  background: var(--background-tertiary);
 }
